# api/controllers/accountCreate.js
@@ -1,44 +1,32 @@
 'use strict';
-/*
- 'use strict' is not required but helpful for turning syntactical errors into true errors in the program flow
- https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode
-*/
-
-/*
- Modules make it possible to import JavaScript files into your application.  Modules are imported
- using 'require' statements that give you a reference to the module.
-
-  It is a good idea to list the modules that your application depends on in the package.json in the project root
- */
+var Account = require('../models/Account.js');
 var util = require('util');
 
-/*
- Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
-
- For a controller in a127 (which this is) you should export the functions referenced in your Swagger document by name.
-
- Either:
-  - The HTTP Verb of the corresponding operation (get, put, post, delete, etc)
-  - Or the operationId associated with the operation in your Swagger document
-
-  In the starter/skeleton project the 'get' operation on the '/hello' path has an operationId named 'hello'.  Here,
-  we specify that in the exports of this module that 'hello' maps to the function named 'hello'
- */
 module.exports = {
   accountCreate: accountCreate
 };
 
-/*
-  Functions in a127 controllers used for operations should take two parameters:
 
-  Param 1: a handle to the request object
-  Param 2: a handle to the response object
- */
 function accountCreate(req, res) {
-  // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'no name given';
-  var accountDetail = util.format('Name: %s!', name);
 
+  // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
+  var accountBody = req.body || 'no order given';
+  var accountDetail = util.format('AccountCreate reqBody: %j!', accountBody);
+  console.log("accountCreate", accountDetail);
+  // Create a order in memory
+  var accountToInsert = new Account(accountBody);
+
+  // Save it to database
+  accountToInsert.save(function(err){
+    if(err) {
+      console.log(err);
+      //res.json({stuff:err});
+    } else {
+      console.log(accountToInsert);
+      res.json(accountToInsert.toString());
+    }
+  });
+  
   // this sends back a JSON response which is a single string
-  res.json(accountDetail);
+  //res.json(accountDetail);
 }
